fix: Update Kaggle dataset download command in Colab notebook
- Changed placeholder dataset path to the actual dataset path for downloading the shuttle track processed data from Kaggle.

--- a/ShuttleTrack_Colab_Train.ipynb
+++ b/ShuttleTrack_Colab_Train.ipynb
@@ -76,8 +76,8 @@
     "!cp kaggle.json ~/.kaggle/\n",
     "!chmod 600 ~/.kaggle/kaggle.json\n",
     "\n",
-    "# Download your dataset from Kaggle (replace with your actual dataset path)\n",
-    "!kaggle datasets download -d <your-username>/<your-dataset-name> -p processed_data --unzip\n",
+    "# Download your dataset from Kaggle (using your actual dataset path)\n",
+    "!kaggle datasets download -d maheshsharan/shuttletrack-processed-data -p processed_data --unzip\n",
     "\n",
     "# List the contents to verify\n",
     "!ls processed_data"
