chore: Update dependencies and enhance Colab notebook for improved functionality
- Updated `requirements.txt` to specify exact versions of dependencies for better reproducibility.
- Modified Colab notebook to clone the correct repository and added a button for tracking shuttlecock.
- Improved inference process in the Streamlit app by saving output videos and displaying success messages.
- Adjusted paths for model checkpoints in various scripts to ensure proper saving and loading.
- Enhanced preprocessing script to normalize coordinates using original image dimensions.
- Added fading trajectory visualization in the video overlay script for better visual representation.

--- a/ShuttleTrack_Colab_Train.ipynb
+++ b/ShuttleTrack_Colab_Train.ipynb
@@ -30,9 +30,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Example: !git clone https://github.com/yourusername/ShuttleTrack.git\n",
-    "!git clone https://github.com/yourusername/ShuttleTrack.git\n",
-    "%cd ShuttleTrack\n"
+    "!git clone https://github.com/MaheshSharan/ShuttleTrack-Hybrid.git\n",
+    "%cd ShuttleTrack-Hybrid"
    ]
   },
   {
@@ -49,7 +48,8 @@
    "outputs": [],
    "source": [
     "!pip install -r requirements.txt\n",
-    "!pip install tensorboard\n"
+    "!pip install tensorboard\n",
+    "!pip install -q kaggle"
    ]
   },
   {
@@ -65,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -q kaggle\n",
+    "\n",
     "\n",
     "# Upload your kaggle.json (Kaggle API token)\n",
     "from google.colab import files\n",
@@ -87,8 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. (Optional) Edit Config\n",
-    "Set device to 'cuda' and adjust batch size for Colab GPU."
+    "## 4. Preprocess Dataset\n"
    ]
   },
   {
@@ -97,13 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import yaml\n",
-    "with open('config/shuttletrack.yaml') as f:\n",
-    "    config = yaml.safe_load(f)\n",
-    "config['device'] = 'cuda'\n",
-    "config['training']['batch_size'] = 16\n",
-    "with open('config/shuttletrack.yaml', 'w') as f:\n",
-    "    yaml.dump(config, f)\n"
+    "!python scripts/preprocess.py"
    ]
   },
   {
