fix: Update Kaggle dataset download command in Colab notebook
- Changed dataset path in the Colab notebook to download the correct shuttlecock frame dataset from Kaggle.
- Removed unnecessary steps for uploading and moving the Kaggle API token, streamlining the process.

--- a/ShuttleTrack_Colab_Train.ipynb
+++ b/ShuttleTrack_Colab_Train.ipynb
@@ -67,20 +67,10 @@
    "source": [
     "\n",
     "\n",
-    "# Upload your kaggle.json (Kaggle API token)\n",
-    "from google.colab import files\n",
-    "files.upload()  # Choose the kaggle.json file from your computer\n",
-    "\n",
-    "# Move kaggle.json to the correct location\n",
-    "!mkdir -p ~/.kaggle\n",
-    "!cp kaggle.json ~/.kaggle/\n",
-    "!chmod 600 ~/.kaggle/kaggle.json\n",
-    "\n",
+    "import kaggle\n",
+    "%cd ShuttleTrack-Hybrid\n",
     "# Download your dataset from Kaggle (using your actual dataset path)\n",
-    "!kaggle datasets download -d maheshsharan/shuttletrack-processed-data -p processed_data --unzip\n",
-    "\n",
-    "# List the contents to verify\n",
-    "!ls processed_data"
+    "!kaggle datasets download -d maheshsharan/shuttlecockframedataset -p ShuttleCockFrameDataset --unzip\n"
    ]
   },
   {
