feat: Enhance Colab notebook with Kaggle API token upload instructions
- Added steps to upload the Kaggle API token and move it to the correct location for seamless dataset access.
- Streamlined the dataset download process by ensuring the Kaggle token is properly configured before executing the download command.

--- a/ShuttleTrack_Colab_Train.ipynb
+++ b/ShuttleTrack_Colab_Train.ipynb
@@ -66,11 +66,18 @@
    "outputs": [],
    "source": [
     "\n",
+    "# Upload your kaggle.json (Kaggle API token)\n",
+    "from google.colab import files\n",
+    "files.upload()  # Choose the kaggle.json file from your computer\n",
     "\n",
-    "import kaggle\n",
+    "# Move kaggle.json to the correct location\n",
+    "!mkdir -p ~/.kaggle\n",
+    "!cp kaggle.json ~/.kaggle/\n",
+    "!chmod 600 ~/.kaggle/kaggle.json\n",
+    "\n",
     "%cd ShuttleTrack-Hybrid\n",
     "# Download your dataset from Kaggle (using your actual dataset path)\n",
-    "!kaggle datasets download -d maheshsharan/shuttlecockframedataset -p ShuttleCockFrameDataset --unzip\n"
+    "!kaggle datasets download -d maheshsharan/shuttlecockframedataset -p ShuttleCockFrameDataset --unzip"
    ]
   },
   {
